--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,4 +27,8 @@
   .menu {
     @apply w-full flex gap-4 cursor-pointer items-center px-4 py-2 hover:bg-gray-100 rounded-lg transition duration-300;
   }
+
+  .menu-2 {
+    @apply block w-full px-4 py-2 hover:bg-gray-200 rounded-lg;
+  }
 }
